# FileManager_py

./: .gitignore  manage.py  pyproject.toml
file_metadata_service/: celery.py  celery_app.py  manage.py  pyproject.toml
file_metadata_service/file_metadata/: asgi.py  settings.py  urls.py  wsgi.py
file_metadata_service/file_metadata_service/: asgi.py  settings.py  wsgi.py
file_metadata_service/metadata/: models.py  serializers.py  tasks.py  views.py
file_metadata_service/metadata/migrations/: 0001_initial.py  0002_rename_created_at_filemetadata_upload_date_and_more.py
file_metadata_service/metadata_service/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
file_mgmt_service/: asgi.py  settings.py  urls.py  wsgi.py
file_upload_service/: manage.py  pyproject.toml
file_upload_service/file_upload_service/: asgi.py  settings.py  urls.py  wsgi.py
