[tool.poetry]
name = "file-upload-service"
version = "0.1.0"
description = ""
authors = ["Yulia Ioffe <yumioffe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
minio = "^7.2.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
